[gd_scene load_steps=8 format=2]

[ext_resource path="res://Main/Pressed.tres" type="StyleBox" id=1]
[ext_resource path="res://Font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Main/Hover.tres" type="StyleBox" id=3]
[ext_resource path="res://Main/Normal.tres" type="StyleBox" id=4]
[ext_resource path="res://Main/GameOver.gd" type="Script" id=5]
[ext_resource path="res://Music/ButtonPress.wav" type="AudioStream" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.294118, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="GameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -60.0
margin_right = 80.0
margin_bottom = 60.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
margin_left = 10.0
margin_top = 10.0
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScore" type="Label" parent="Panel/VBoxContainer"]
margin_right = 145.0
margin_bottom = 17.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 2 )
text = "New High Score!"
align = 1

[node name="CurrentScore" type="Label" parent="Panel/VBoxContainer"]
margin_top = 21.0
margin_right = 145.0
margin_bottom = 38.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 2 )
text = "You got: 30"
align = 1

[node name="PlayAgain" type="Button" parent="Panel/VBoxContainer"]
margin_top = 42.0
margin_right = 145.0
margin_bottom = 69.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 2 )
text = "Play Again"

[node name="MainMenu" type="Button" parent="Panel/VBoxContainer"]
margin_top = 73.0
margin_right = 145.0
margin_bottom = 100.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 2 )
text = "Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
[connection signal="pressed" from="Panel/VBoxContainer/PlayAgain" to="." method="_on_PlayAgain_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
